fix for 3 col cta list item alignment

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -1630,9 +1630,9 @@ ul {
                    ul{
                        height:100%;
                        li{
-                           display: flex;
+                           /*display: flex;
                            flex-direction: column;
-                           height: 100%;
+                           height: 100%;*/
                         .icon-parent{
                             position: relative;
                             bottom:40px;
